tests/traci/set_variable/Vehicle/ChangeRoute/invalidOnInternal/errors.traci
#Error while connecting: tcpip::Socket::connect() @ connect: Connection refused
Error: Answered with error to command 0xc4: Route replacement failed for veh0
